tests/ui/async-fn.stderr
error: no_panic attribute on async fn is not supported, but function 'f' is async!
 --> tests/ui/async-fn.rs:4:1
  |
4 | async fn f() {
  | ^^^^^
